namespaces/live.cloud-platform.service.justice.gov.uk/laa-crown-court-remuneration-production/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-crown-court-remuneration-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-crown-court-remuneration-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: laa-crown-court-remuneration-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: monitoring
---
kind: NetworkPolicy
apiVersion: projectcalico.org/v3
metadata:
  name: block-egress
  namespace: laa-crown-court-remuneration-production
spec:
  order: 50.0
  selector: all()
  egress:
  - action: Deny
  types:
  - Egress
